# learn-2-learn

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Procfile  README.md  __init__.py  alchemy.py  app.py  bot.session  chess_board.py  chess_index.html  docker-compose.yml  gcloud_settings.py  jupyter_szkic.ipynb  main.py  manage.py  pyproject.toml  q_generator.py  railway.json  reqirements.txt  requirements.txt  requirements_cpu.txt  requirements_gpu.txt  run_django.sh  system_info.py  szkic.py  test-certificate.yaml
.github/workflows/: deploy.yml  docker-publish.yml
ai_kitchen/: apps.py  bot.py  esergan_model.py  esergan_model_processor.py  open_ai.py  pdf_image_extractor.py  tools.py  tts.py
ansible/fst_k8s/: inventory.yaml
ansible/fst_k8s/playbooks/: deploy-consul.yaml  deploy_vault.yaml  kind-create-pods.yml  set-nodes-ssh.yaml
ansible/fst_k8s/roles/consule/tasks/: main.yaml
ansible/fst_k8s/roles/consule/templates/: values.yaml.j2
ansible/fst_k8s/roles/vault/tasks/: main.yaml
ansible/fst_k8s/roles/vault/templates/: vault-values.yaml.j2
ansible/local/: build_and_deploy_nginx.yml
ansible/vault/: init_vault.yml  setup_vault.yml
api/: apps.py
app_utils/: drive_auth.py  urls.py  views.py
backend/django/: Dockerfile  pyproject.toml
backend/django/ai_kitchen/: apps.py  bot.py  urls.py  views.py
backend/django/api/: settings.py  urls.py
backend/docs/: README.md  api_usage.md  architecture.md
backend/fast_api/: Dockerfile  main.py  pyproject.toml
backend/fastapi_backend/: Dockerfile  pyproject.toml  pytest.ini
backend/fastapi_backend/gameenv/: main.py
backend/fastapi_backend/tests/: conftest.py  test_routers.py  test_utils.py  tests_github.py
backend/fastapi_backend/webenv/: main.py
backend/fastapi_backend/webenv/routers/: github.py
backend/fastapi_backend/webenv/services/: github_service.py
backend/sessions/: session.json  session_summary.json
backend/training/training_container/: Dockerfile  entrypoint.sh  requirements.txt
backend/training/training_data/fine_tune_requests/: request.json
backend/training/training_data/model_versions/: model.json
backend/training/training_data/training_logs/: epoch.json
backend/validators/: dependency_validators.py
dj_rest/: manage.py  requirements.txt
dj_rest/core/: asgi.py  settings.py  urls.py  wsgi.py
dj_rest/core/settings/: base.py  dev.py  prod.py
dj_rest/rest_fabric_control/: apps.py  models.py  utils.py
dj_rest/rest_fabric_control/migrations/: 0001_initial.py
dj_rest/rest_fabric_control/test_config/: test_settings.py  test_utils.py
django_fst/: Dockerfile  README.md  db.sqlite3  manage.py  requirements.txt
django_fst/core/: asgi.py  settings.py
django_fst/core/settings/: base.py  prod.py
django_fst/rest_fabric_control/: admin.py  apps.py  models.py  views.py
docs/: arhchitecture.md  cicd.md  infrastructure.md  secrets_roadmap.md
fa/: Dockerfile  requirements.txt
fa/routes/: websocket.py
fastapi_app/: fapi_main.py
fastapi_app/scripts/: healthcheck.py
fastapi_app/tests/: test_app.py
files_for_recycle/ansible/playbooks/: deploy_api.yaml  deploy_consul.yaml  deploy_k8s.yaml
files_for_recycle/k8s/configmaps/: metallb-config.yaml
files_for_recycle/k8s/manifests/: dj-service.yaml
files_for_recycle/shared/: settings.py
files_for_recycle/tg/m0dern/: img.py
files_for_transfer/ansible/playbooks/: init_vault_secrets.yaml  manage_secrets.yaml  setup_remote_hosts.yaml
files_for_transfer/k8s/configmaps/: fa-config.yaml
files_for_transfer/k8s/manifests/: dj-deployment.yaml  fa-service.yaml
files_for_transfer/tg/: requirements.txt  websocket.py
files_for_transfer/tg/azer0th/: main.py
fst_on_demand/: Dockerfile  fst_app.py
fst_on_demand/k8s/configmaps/: kind-config.yaml  vault-configmap.yaml
fst_on_demand/k8s/deployments/: consul.yml  vault.yml
fst_on_demand/k8s/roles/: vault.yml
fst_on_demand/k8s/secrets/: consul-service.yaml  vault-secret.yaml
fst_on_demand/k8s/services/: consule-service.yaml  vault-service.yaml
fst_on_demand/routes/: websocket.py
infrastructure/cert-manager/: letsencrypt-clusterissuer.yaml
infrastructure/inventory/: hosts.yaml
infrastructure/manifests/: ingress.yaml  namespaces.yaml
infrastructure/manifests/secrets/: consul-config.yaml  consul-deploy.yaml  vault-secretprovider.yaml
k8s/: progress.md
k8s/cert-manager/: l2l-cert.yaml
k8s/configmaps/: dj-config.yaml
k8s/manifests/: django-service.yaml  fa-deployment.yaml  fastapi-service.yaml  ingress.yaml  vault-secretprovider.yaml
project/: settings.py  urls.py
scripts/: deploy_django.sh  deploy_redis.sh  healthcheck.py  init_m0dern.sh  init_vault.sh  monitor_services.sh
services/: Dockerfile.vault
services/nginx/: Dockerfile  nginx.conf
services/vault/: Dockerfile
services/vault/config/: vault.hcl
shared/: settings.py
staticfiles/: staticfiles.json
telega/: README.md  generate_session.py  session_keys.json
telegram_bot/: apps.py  bot.py  gcs_auth.py  my_bot.session  telegram_config.py  urls.py  views.py
templates/: index.html
tests/: test_app.py
tg/: README.md  check.py
tg/azer0th/: main.py
tg/m0dern/: img.py  main.py
user_management/: admin.py  forms.py  models.py
user_management/migrations/: 0001_initial.py
vault/: django-policy.hcl
