[tool.poetry]
name = "my_project"
version = "0.1.0"
description = "Project for integrating FastAPI with Django and managing chatbot workflows."
authors = ["Maks Beaver <maksymviunov@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

# Define packages as an array
packages = [
  { include = "backend" },
  { include = "backend.django.ai_kitchen" },

]

[tool.poetry.dependencies]
python = "^3.10.5"
toml = "^0.10.2"
python-telegram-bot = "^21.6"
python-chess = "^1.999"
cairosvg = "^2.7.1"
nest-asyncio = "^1.6.0"
python-dotenv = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = "^23.3.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
