[tool.poetry]
name = "django_api"
version = "0.1.0"
description = "Django API project"
authors = ["Maks Beaver <maksymviunov@pm.me>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
djangorestframework = "^3.14"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
