[tool.poetry]
name = "fast-api"
version = "0.1.0"
description = "FastAPI microservice"
authors = ["Maks Beaver <maksymviunov@pm.me>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95"
uvicorn = "^0.22"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"