[tool.poetry]
name = "fastapi-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
uvicorn = "^0.22.0"
python = "^3.10"
httpx = "^0.24.0"
fastapi = "^0.95.2"

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.18.3"
httpx = "^0.24.0"
respx = "^0.21.1"

[tool.poetry.group.dev.dependencies]
respx = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
